[package]
name = "cryptimitives"
license = "MIT"
version = "0.16.3"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography"]
description = "Cryptographic primitives collection."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.9.4", features = ["alloc"] }
bip39 = { version = "1.0.1", features = [] }
chacha20 = "0.8.1"
cryptraits = "0.10.0"
cryptraits-macros = "0.1.0"
curve25519-dalek-ng = { version = "4.1.1", features = ["alloc"] }
ed25519-dalek = { version = "1.0.1", features = ["alloc"] }
hex = "0.4.3"
hkdf = { version = "0.12.0", default-features = false }
hmac = {version = "0.12.0", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
schnorrkel = { version = "0.10.2", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
serde =  { version = "1.0.136", default-features = false, optional = true }
zeroize = { version = ">=1.4, <1.5", features = ["zeroize_derive"] }

[dev-dependencies]
hex-literal = "0.3.4"
serde_test = "1.0.136"

[features]
default = ["std"]
serde_derive = ["serde"]
std = [
    "cryptraits/std",
    "aes-gcm/std",
    "bip39/std",
    "bip39/rand",
    "chacha20/std",
    "hmac/std",
    "hkdf/std",
    "rand_core/std",
    "schnorrkel/std",
    "schnorrkel/u64_backend",
    "schnorrkel/getrandom",
    "curve25519-dalek-ng/std",
    "curve25519-dalek-ng/u64_backend",
    "serde/std",
    "sha2/std",
    "ed25519-dalek/std"
]